Thu Apr 19 18:24:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_byteswap.h:
          New wrapper file for byteswap.h

Thu Apr 19 16:47:46 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          Use the -boost option for TAO/tests/Sequence_Unit_Tests when Config
          BOOST is present.

Thu Apr 19 14:25:39 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_time.h (ace_timezone): Changed ACE_HAS_WIN32 to
          ACE_WIN32 to fix a bug on Windows. Thanks to Jan Kalin <jan dot
          kalin at zag dot si> for this fix.

Thu Apr 19 14:10:18 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-doxygen.h: Turn on ACE_Dev_Poll_Reactor doc generation
          using ACE_HAS_DEV_POLL instead of ACE_HAS_EVENT_POLL. The latter
          will be automatatically turned off on systems w/o epoll and the
          docs get lost.

Thu Apr 19 13:59:06 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Obstack_T.cpp:

          Because the ACE_ALLOCATOR macro contains a return, head_ and curr_
          could technically be used without being initialized (however
          unlikely).  Initialize them to zero in the initializer list.

Thu Apr 19 13:29:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc.h:
          Don't set ACE_HAS_INTRINSIC_INTERLOCKED on WinCE

Thu Apr 19 11:01:49 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/SSL/SSL_SOCK_Stream.cpp:
          Added static_cast to silence compiler warning on LynxOS.

        * include/makeinclude/platform_lynxos.GNU:
          Added PLATFORM_X11_LIBS to PLATFORM_TK_LIBS to fix
          linking error on LynxOS.

Thu Apr 19 05:30:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_intrin.h:
          Don't declare the _Interlocked methods with Intel C++ 9.0

Wed Apr 18 14:11:28 UTC 2007  Olli Savia  <ops@iki.fi>
